cherry-pick: test fixes - JUnit 5 FutureTask reflection compatibility, JavaDeserializeTest
- Java.java: remove dead sync-field reflection (removed in Java 7), add InaccessibleObjectException handling
- JavaDeserializeTest.java: add serialize/deserialize round-trip tests and ObjectInputFilter allowlist tests

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>